--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Plant Indentifier</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sign_up">Sign up</string>
+    <string name="enter_email">Enter email</string>
+    <string name="john_mail_com">john@mail.com</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="password">Password</string>
+    <string name="re_enter_password">Re-enter Password</string>
+    <string name="or">Or</string>
+    <string name="sign_up_with">Sign up with</string>
+    <string name="sign_up_with_facebook">Sign up with facebook</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="sign_in">Sign in</string>
 </resources>
