--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,19 @@
     <string name="or">Or</string>
     <string name="sign_up_with">Sign up with</string>
     <string name="sign_up_with_facebook">Sign up with facebook</string>
-    <string name="already_have_an_account">Already have an account?</string>
+    <string name="already_have_an_account">Already have an account?&#160;</string>
     <string name="sign_in">Sign in</string>
+    <string name="empty_fields">Empty fields are not allowed</string>
+    <string name="email_not_valid">Email not valid</string>
+    <string name="something_went_wrong">Something went wrong</string>
+    <string name="login">Login</string>
+    <string name="login_with">Login with</string>
+    <string name="don_t_have_an_account">Don\'t have an account?&#160;</string>
+    <string name="account_created_successfully">Account  created successfully</string>
+    <string name="passwords_are_not_identical">Passwords are not identical</string>
+    <string name="login_successful">Login successful</string>
+    <string name="home">Home</string>
+    <string name="explore">explore</string>
+    <string name="saved">Saved</string>
+    <string name="profile">Profile</string>
 </resources>
