--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="explore">explore</string>
     <string name="saved">Saved</string>
     <string name="profile">Profile</string>
+    <string name="scan_and_indentify_the_plant">Scan and indentify the plant</string>
 </resources>
